# mhdc3dl

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  Makefile.in  ProjectHome.md  README.md  basic.C  basic.h  block_vector.h  config.status  configure  configure.ac  dd.cfg  default.cfg  default.cfgc  gen_random.C  gen_random.h  globals.C  globals.h  gmon.out  input.C  input.h  io.C  io.h  linops.C  lss.C  lss.h  mhdc3dl.C  mhdc3dl.h  mhdc3dl.kdevelop  mhdc3dl.kdevelop.filelist  mhdc3dl.kdevelop.pcs  mhdc3dl.kdevses  mhdc3dl_launch.py  mhdc3dl_python.C  mhdc3dl_run_default.py  mhdc3dl_test.C  spectral.C  spectral.h  (+3 more)
CMakeModules/: FindLass.cmake
autom4te.cache/: output.0  traces.0
doc/: time_opt.txt
src/: CMakeLists.txt  basic.h  input.C  input.h  io.C  linops.C  lss.h  mhdc3dl.C  mhdc3dl.h  mhdc3dl_python.C  mhdc3dl_test.C  spectral.h  sss.C
test/: CMakeLists.txt  hb.dat_hat  mhdc3dl_run_default.py  stdtest.cfg  stdtest_32.cfg  stdtest_48.cfg  stdtest_64.cfg
testing/: launch  stdtest.cfg  time_opt.txt
trunk/: .mhdc3dl_random_launch.swp  Doxyfile  Makefile  Makefile.in  basic.C  basic.h  block_vector.h  config.status  configure  configure.ac  dd.cfgc  default.cfg  gen_random.C  gen_random.h  globals.C  globals.h  input.C  input.h  io.C  io.h  linops.C  linops.h  lss.C  lss.h  mhdc3dl.C  mhdc3dl.h  mhdc3dl.kdevelop  mhdc3dl.kdevelop.filelist  mhdc3dl.kdevelop.pcs  mhdc3dl.kdevses  mhdc3dl_launch_defs.py  mhdc3dl_lss.C  mhdc3dl_lss.h  mhdc3dl_python.C  mhdc3dl_random_launch  mhdc3dl_run_default.py  mhdc3dl_test.C  spectral.C  spectral.h  sss.C  (+4 more)
trunk/autom4te.cache/: output.0  traces.0
trunk/testing/: stdtest.cfg  time_opt.txt
trunk/vzdeigen/: Makefile.in  vzdeigen.f  vzdeigen.h
vzdeigen/: Makefile  vzdeigen.f
