set(TESTMHDC3DL_TARGET testns3dp)

enable_testing()

set(TESTMHDC3DL_DIR "${CMAKE_SOURCE_DIR}/test")

#include_directories("${CMAKE_SOURCE_DIR}")

set(TESTMHDC3DL_SOURCES 

"${TESTMHDC3DL_DIR}/testns3dp.C"

)

#set(TESTMHDC3DL_TARGET testgodess)
#add_executable(${TESTMHDC3DL_TARGET} ${TESTMHDC3DL_SOURCES})
#target_link_libraries(${TESTMHDC3DL_TARGET} ${LIBS} mhdc3dl)
#add_dependencies(${TESTMHDC3DL_TARGET} mhdc3dl)

add_test(${TESTMHDC3DL_TARGET} ${CMAKE_CURRENT_BINARY_DIR}/${TESTMHDC3DL_TARGET})


set (TESTMHDC3DL_TESTCONFS

"${TESTMHDC3DL_DIR}/stdtest.cfg"
"${TESTMHDC3DL_DIR}/stdtest_32.cfg"
"${TESTMHDC3DL_DIR}/stdtest_48.cfg"
"${TESTMHDC3DL_DIR}/stdtest_64.cfg"
"${TESTMHDC3DL_DIR}/stdtest_lr.cfg"

)

set (TESTMHDC3DL_SCRIPTS

"${TESTMHDC3DL_DIR}/mhdc3dl_run_default.py"

)

install (FILES ${TESTMHDC3DL_TESTCONFS} DESTINATION share/mhdc3dl/test PERMISSIONS OWNER_EXECUTE OWNER_READ OWNER_WRITE GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
install (FILES ${TESTMHDC3DL_SCRIPTS} DESTINATION share/mhdc3dl/test PERMISSIONS OWNER_EXECUTE OWNER_READ OWNER_WRITE GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)

